2003-02-14  Duncan Mak  <duncan@ximian.com>

	* api/gtk-api.xml:
	* sources/Gtk.metadata: Mark 'out' param in GetSelectionBounds,
	thanks to Lee Mallabone for spotting that.

2003-02-13  Mike Kestner  <mkestner@speakeasy.net>

	* glib/Boxed.cs : fix a ctor bug reported to the list by 
	u900842@oz.nthu.edu.tw.

2003-02-13  Mike Kestner  <mkestner@speakeasy.net>

	* sample/Makefile.in: add a distclean target

2003-02-13  Charles Iliya Krempeaux  <charles@reptile.ca>

	* README : Clarifications and additions

2003-02-13  Stefan Sarin <gprojects@saring.de>

	* gdk/Color.custom: fixed ToString ().

2003-02-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* gconf/GConf/Client.cs:
	* gconf/GConf/NoSuchKeyException.cs: added key string to the exception
	when Get does not find it.

2003-02-11  Duncan Mak  <duncan@ximian.com>

	* gnome/voidObjectAffineSVPintSignal.cs:
	* gnome/CanvasProxy.cs: Make the voidObjectAffineSVPintSignal
	class be in the 'GtkSharp' namespace, instead of 'GtkSharp.Gnome'.

2003-02-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glade/XML.custom: added a couple of checks for null.

2003-02-09  Duncan Mak  <duncan@ximian.com>

	* sources/Gtk.metadata: 
	* api/gtk-api.xml: Gtk.Editable.InsertText should have the
	position be marked 'ref', not 'out', because it is an in-out parameter.

	* gtk/Entry.custom: Overload for InsertText.
	* gtk/Clipboard.custom: New overload for SetText.

	* sources/Gtk.metadata: Mark out params for methods in GtkCalendar,
	GtkCellRenderer, GtkWindow, GtkRuler, GtkLayout, GtkScrolledWindow
	and GtkSpinButton. Monotalk is very useful for this kind of work.

2003-02-08  Radek Doulik  <rodo@ximian.com>

	* glib/MainContext.cs: beginning of MainContext class, just
	Iteration and Pending methods to be able to refresh Gtk in the
	middle of time consuming function where it's not worth while to
	use threads

	* glue/style.c (gtksharp_gtk_style_get_font_description): new
	function to access style's font_description field
