@@ -1,3 +1,7 @@
+2003-02-18  Mark Crichton  <crichton@gimp.org>
+
+	* generator/EnumGen.cs: Handle different enum types.
+
 2003-02-14  Duncan Mak  <duncan@ximian.com>
 
 	* api/gtk-api.xml:
